--- a/_posts/2021-06-01-talks.markdown
+++ b/_posts/2021-06-01-talks.markdown
@@ -27,14 +27,10 @@ In russian:
 * About ocsigen on IT Meetup 2018
 * "Pure functional data structures" (for students in 2019)
 * "Pure functional data structures" (for students in 2020)
+* ["Lambda-calculus"](lambda-2023) (for students in 2023)
 
 
 
-You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
-
-To add new posts, simply add a file in the `_posts` directory that follows the convention `YYYY-MM-DD-name-of-post.ext` and includes the necessary front matter. Take a look at the source for this post to get an idea about how it works.
-
-Jekyll also offers powerful support for code snippets:
 
 {% highlight ruby %}
 def print_hi(name)
@@ -50,3 +46,4 @@ Check out the [Jekyll docs][jekyll-docs] for more info on how to get the most ou
 [jekyll-gh]:   https://github.com/jekyll/jekyll
 [jekyll-talk]: https://talk.jekyllrb.com/
 [ocanren-2016]: https://youtu.be/tZm4b14_tZs?list=PLnqUlCo055hX_BCFl3kLW1bB9Mp4wZACc
+[lambda-2023]: https://raw.githubusercontent.com/Kakadu/kakadu.github.io/master/papers/lambda2023/lambda2023.pdf
